--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="quiz-container"></div>
-  <!-- Biblioteca para converter o elemento em imagem (mantida se precisar para outras funções) -->
+  <!-- Biblioteca para futuras funcionalidades (por exemplo, captura de tela) -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="sketch.js"></script>
 </body>
